examples/myexamples/apiserver/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiserver-svc
  namespace: default
spec:
  selector:
    app: apiserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
