examples/myexamples/apiserver/yaml/all-in-one.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
  namespace: default
  labels:
    app: apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiserver
  template:
    metadata:
      name: apiserver
      labels:
        app: apiserver
    spec:
      containers:
        - name: apiserver
          image: docker.io/850278995/apiserver
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: apiserver-svc
  namespace: default
spec:
  selector:
    app: apiserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiserver-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #  ingressClassName: nginx
  ingressClassName: cloudflare-tunnel # 指定 ingress controller 的类型为 cloudflare-tunnel
  rules:
    - host: apiserver.sjbl.club # 域名
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apiserver-svc
                port:
                  number: 80
