examples/myexamples/apiserver/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiserver-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: nginx
  ingressClassName: cloudflare-tunnel # 指定 ingress controller 的类型为 cloudflare-tunnel
  rules:
    - host: apiserver.sjbl.club # 域名
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apiserver-svc
                port:
                  number: 80
